--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -21,7 +21,8 @@
 }
 
 body {
-    background-color:#E4E4E4;
+    background-color:#111111;
+	background:url(../img/vaisto_logo_500.png) no-repeat center top; /* 170px x 200px */
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -32,10 +33,7 @@ body {
 
 /* Portrait layout (default) */
 .app {
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    text-align:center;                                   /* offset horizontal: half of text area width */
+    text-align:center;             /* offset horizontal: half of text area width */
 }
 
 /* Landscape layout (with min-width) */
@@ -46,15 +44,6 @@ body {
         margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                       /* offset horizontal: half of image width and text area width */
     }
-}
-
-h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
 }
 
 .event {
