--- a/www/css/index.css
+++ b/www/css/index.css
@@ -22,7 +22,7 @@
 
 body {
     background-color:#111111;
-	background:url(../img/vaisto_logo_500.png) no-repeat center top; /* 170px x 200px */
+	/* background:url(../img/vaisto_logo_500.png) no-repeat center top; */
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -33,6 +33,11 @@ body {
 
 /* Portrait layout (default) */
 .app {
+	color: white;
+    text-align:center;             /* offset horizontal: half of text area width */
+}
+
+.logo {
     text-align:center;             /* offset horizontal: half of text area width */
 }
 
@@ -40,8 +45,8 @@ body {
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
         background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
+        padding:0px 0px 0x 0px;  /* padding-top + padding-bottom + text area = image height */
+        margin: 0px 0px 0px 0px;  /* offset vertical: half of image height */
                                       /* offset horizontal: half of image width and text area width */
     }
 }
